# PDF_OCR_Translator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
